force-app/main/default/objects/Repository__c/fields/Build_and_Deploy_Organization__c.field-meta.xml
<CustomField>
    <fullName>Build_and_Deploy_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Build and Deploy Organization</label>
    <referenceTo>Organisation__c</referenceTo>
    <relationshipLabel>Repositories</relationshipLabel>
    <relationshipName>Repositories</relationshipName>
    <type>Lookup</type>
</CustomField>