force-app/main/default/objects/Repository__c/fields/Build_and_Deploy_Organizations__c.field-meta.xml
<CustomField>
    <fullName>Build_and_Deploy_Organizations__c</fullName>
    <description>for pipeline deployment</description>
    <label>Build and Deploy Organizations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>