force-app/main/default/objects/Repository__c/fields/Deployment_Style__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Style__c</fullName>
    <label>CI Deployment Style</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>STOP ON FAILURE</fullName>
                <default>true</default>
                <label>STOP ON FAILURE</label>
            </value>
            <value>
                <fullName>CONTINUE ON FAILURE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>