force-app/main/default/objects/Repository__c/fields/Is_Build_For_Repository__c.field-meta.xml
<CustomField>
    <fullName>Is_Build_For_Repository__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Build For Repository</label>
    <type>Checkbox</type>
</CustomField>