force-app/main/default/objects/Repository__c/fields/Is_Default_Repository__c.field-meta.xml
<CustomField>
    <fullName>Is_Default_Repository__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Default Repository</label>
    <type>Checkbox</type>
</CustomField>