force-app/main/default/objects/Repository__c/fields/Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Pipeline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pipeline</label>
    <referenceTo>Pipeline__c</referenceTo>
    <relationshipLabel>Repositories</relationshipLabel>
    <relationshipName>Repositories</relationshipName>
    <type>Lookup</type>
</CustomField>