force-app/main/default/objects/Repository__c/fields/Repository_Type__c.field-meta.xml
<CustomField>
    <fullName>Repository_Type__c</fullName>
    <label>Repository Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vlocity</fullName>
            </value>
            <value>
                <fullName>Veeva Vault</fullName>
            </value>
            <value>
                <fullName>Commerce Cloud</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud</fullName>
            </value>
            <value>
                <fullName>MuleSoft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>