force-app/main/default/objects/Repository__c/fields/Run_Tests_on_Deployment__c.field-meta.xml
<CustomField>
    <fullName>Run_Tests_on_Deployment__c</fullName>
    <label>Run Tests on Deployment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>