force-app/main/default/objects/Repository__c/fields/Show_Available_Pipelines_Only__c.field-meta.xml
<CustomField>
    <fullName>Show_Available_Pipelines_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Available Pipelines Only</label>
    <type>Checkbox</type>
</CustomField>