force-app/main/default/objects/Repository__c/fields/Specified_Tests__c.field-meta.xml
<CustomField>
    <fullName>Specified_Tests__c</fullName>
    <label>Specified Tests</label>
    <type>TextArea</type>
</CustomField>